--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "express": "^4.21.2",
     "next": "15.1.2",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
